--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ source_group ("core" FILES ${CoreFiles})
 source_group ("sources" FILES ${SourceFiles})
 
 add_executable (fuzzy-bools ${AllFiles})
-target_include_directories(fuzzy-bools PUBLIC ./deps/glm/glm/)
+target_include_directories(fuzzy-bools PUBLIC ./deps/glm/glm/ ./deps/cdt/)
 
 file (GLOB TestSourceFiles test/*)
 set (TestFiles ${TestSourceFiles})
